--- a/flex/05-flex-modal/solution/solution.html
+++ b/flex/05-flex-modal/solution/solution.html
@@ -18,6 +18,9 @@
         </div>
         <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
         <button class="continue">Continue</button>
+        <button class="continue">Continue</button>
+        <button class="cancel">Cancel</button>
+        <button class="cancel">Cancel</button>
         <button class="cancel">Cancel</button>
       </div>
     </div>
